--- a/css/template.css
+++ b/css/template.css
@@ -57,6 +57,8 @@ table {
 
 body { 
     margin: 0; background: #000;
+    height: 100%;
+    width: 100%;
 }
 
 video { 
@@ -206,8 +208,8 @@ a:hover {
 
 
 /* Cuando este a la Izq, para esconderlo posicionarlo a la Izq a -width */
-.left{left:-300px;}
-.show{left:0;}
+.left{margin-left:-300px;}
+.show{margin:0;}
 
 #showmenu{
 	margin-left:calc(100% + 20px);
@@ -224,7 +226,20 @@ a:hover {
     background-color: rgba(169,31,95,1.0);
 }
 
-#container{padding: 50px;}
+#conteudo{
+	position:fixed;
+	background-color:white;
+	height:100px;
+	z-index:10;
+	width:100%;
+	color:#bbb;
+	margin: 50px 0 0 0;
+	-webkit-transition: all 0.3s ease;
+	-moz-transition: all 0.3s ease;
+	transition: all 0.3s ease;
+	opacity:1;
+	font-family: 'Source Sans Pro', sans-serif;
+}
 
 /* ----------------------------------------------------------SITE*/
 
@@ -257,7 +272,13 @@ a:hover {
     margin: 27px;
 }
 
-
+.bg-grade{
+	background-image: url('../img/bg-grade.png');
+	height: 100%;
+	padding: 100%;
+	z-index: 2;
+	position: absolute;
+}
 
 
 
