--- a/css/template.css
+++ b/css/template.css
@@ -125,7 +125,7 @@ a:hover {
 	background-color:#a91f5f;
 	height:100%;
 	z-index:10;
-	width:300px;
+	width: 16%;
 	color:#bbb;
 	top:0;
 	-webkit-transition: all 0.3s ease;
@@ -168,7 +168,6 @@ a:hover {
 	font-weight: 600;
 }
 #menu ul a i{
-	margin-right:10px;
 	font-size: 18px;
 	margin-top: 3px;
 	width: 20px;
@@ -208,7 +207,13 @@ a:hover {
 
 
 /* Cuando este a la Izq, para esconderlo posicionarlo a la Izq a -width */
-.left{margin-left:-300px;}
+.left{
+	margin-left:-16%;
+}
+.right{
+	margin-right: 16%;
+	width: calc(100% + 16%);
+}
 .show{margin:0;}
 
 #showmenu{
@@ -224,23 +229,28 @@ a:hover {
 	transition: all 0.3s ease;
     border-radius: 50%;
     background-color: rgba(169,31,95,1.0);
+
 }
 
 #conteudo{
-	position:fixed;
-	background-color:white;
-	height:100px;
-	z-index:10;
-	width:100%;
-	color:#bbb;
-	margin: 50px 0 0 0;
-	-webkit-transition: all 0.3s ease;
-	-moz-transition: all 0.3s ease;
-	transition: all 0.3s ease;
-	opacity:1;
-	font-family: 'Source Sans Pro', sans-serif;
+    position: absolute;
+    right: 0;
+    background-color: white;
+    height: 100px;
+    width: 84%;
+    color: #bbb;
+    /* margin: 50px; */
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+    opacity: 1;
+    font-family: 'Source Sans Pro', sans-serif;
+    z-index: 2;
 }
 
+#showmenu ~ #conteudo{
+	background-color: red;
+}
 /* ----------------------------------------------------------SITE*/
 
 .pause{
@@ -253,9 +263,10 @@ a:hover {
 }
 
 .areaLogo{
-    height: 185px;
     width: 100%;
     background-color: white;
+    padding: 20px;
+    box-sizing:border-box;
 }
 
 .arrow-down {
@@ -269,7 +280,7 @@ a:hover {
 }
 
 .logoSite{
-    margin: 27px;
+    width: 100%;
 }
 
 .bg-grade{
@@ -277,7 +288,7 @@ a:hover {
 	height: 100%;
 	padding: 100%;
 	z-index: 2;
-	position: absolute;
+	position: fixed;
 }
 
 
