--- a/css/template.css
+++ b/css/template.css
@@ -294,12 +294,44 @@ a:hover {
 
 
 .iframe-style{
-    padding: 15px;
-    width: 230px;
+    padding: 5px;
     background-color: white;
-    margin: 15px auto;
-    border-radius: 15px;
-    -webkit-box-shadow: 0px 0px 42px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 0px 42px 0px rgba(0,0,0,0.75);
-    box-shadow: 0px 0px 42px 0px rgba(0,0,0,0.75);
+    margin: 40px auto;
+    border-radius: 6px;
+    -webkit-box-shadow: 0px 0px 42px 0px rgba(0,0,0,0.50);
+    -moz-box-shadow: 0px 0px 42px 0px rgba(0,0,0,0.50);
+    box-shadow: 0px 0px 42px 0px rgba(0,0,0,0.50);
+    width: 385px;
+}
+
+.time-num{
+    width: 90px;
+    background-color: black;
+    display: inline-block;
+    height: 100px;
+    margin: 0px;
+    font-family: 'roboto';
+    border-radius: 5px;
+}
+.countdown-title{
+    margin: 20px 0 0 0;
+    font-size: 30pt;
+    color: #DC0885;
+    text-align: center;
+
+}
+
+.countdown-subtitle{
+    font-size: 11pt;
+    color: #8E8E8E;
+    text-align: center;
+}
+
+.countdown{
+    color:white;
+}
+
+.subtitle-carousel{
+    font-size: 18pt;
+    margin-top: 15px;
 }
