--- a/css/carousel.css
+++ b/css/carousel.css
@@ -43,13 +43,13 @@ body {
 }
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
-  z-index: 10;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    height: 30%;
-    width: 50%;
-    margin: -15% 0 0 -25%;
+    z-index: 10;
+    position: static;
+    /* top: 50%; */
+    /* left: 50%; */
+    /* height: 30%; */
+    /* width: 50%; */
+    margin: 60px 0 0 0;
 }
 
 /* Declare heights because of positioning of img element */
