--- a/css/template.css
+++ b/css/template.css
@@ -96,10 +96,6 @@ a {
     transition: .6s background; 
 }
 
-a:hover { 
-    background: rgba(0,0,0,0.9); 
-}
-
 .stopfade { 
     opacity: .5; 
 }
@@ -109,9 +105,6 @@ a:hover {
    background: rgba(0,0,0,0.5);
 }
 
-@media screen and (max-width: 500px) { 
-  div{width:70%;} 
-}
 @media all and (max-device-width: 800px) {
   body { background: url("../video/polina.jpg") #000 no-repeat center center fixed; background-size: cover; }
   #bgvid, #polina button { display: none; }
@@ -294,14 +287,14 @@ a:hover {
 
 
 .iframe-style{
-    padding: 5px;
     background-color: white;
     margin: 40px auto;
     border-radius: 6px;
     -webkit-box-shadow: 0px 0px 42px 0px rgba(0,0,0,0.50);
     -moz-box-shadow: 0px 0px 42px 0px rgba(0,0,0,0.50);
     box-shadow: 0px 0px 42px 0px rgba(0,0,0,0.50);
-    width: 385px;
+    max-width: 385px;
+    min-width: 194px; 
 }
 
 .time-num{
@@ -309,7 +302,7 @@ a:hover {
     background-color: black;
     display: inline-block;
     height: 100px;
-    margin: 0px;
+    margin: 3px 0;
     font-family: 'roboto';
     border-radius: 5px;
 }
@@ -334,4 +327,10 @@ a:hover {
 .subtitle-carousel{
     font-size: 18pt;
     margin-top: 15px;
+}
+
+.bg-menu-tablet{
+    height: 60px;
+    background-color: red;
+    width: 100%;
 }
