--- a/css/template.css
+++ b/css/template.css
@@ -119,6 +119,7 @@ a {
 	height:100%;
 	z-index:10;
 	width: 16%;
+    min-width: 160px; 
 	color:#bbb;
 	top:0;
 	-webkit-transition: all 0.3s ease;
